--- a/Js_local_WorkingCopy.conf
+++ b/Js_local_WorkingCopy.conf
@@ -149,10 +149,10 @@ https:\/\/api\.termius\.com\/api\/v3\/bulk\/account\/ url script-response-body F
 ^https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body File/N/BaiduCloud.js
 
 #Faceapp
-^http-response ^https?:\/\/api\.faceapp\.io(.*)\/api\/v.*\/auth\/user\/credentials url script-response-body File/N/FaceApp.js
+^https?:\/\/api\.faceapp\.io(.*)\/api\/v.*\/auth\/user\/credentials url script-response-body File/N/FaceApp.js
 
 #Splice
-https:\/\/splice\.oracle\.\w+\.com\/devices\/me url script-response-body File/N/Splice.js
+^https:\/\/splice\.oracle\.\w+\.com\/devices\/me url script-response-body File/N/Splice.js
 
 #什么值得买去社区文章信息流广告
 ^https://article-api.smzdm.com/article/index_home_page url script-response-body File/N/smzdm.js
